socials in footer but icons aren't fixed up yet
Github icon is clipped unfortunately and linkedin icon should be changed
to have background with round corners and color corresponding to primary
color

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -31,6 +31,25 @@ a:hover {
     text-decoration: underline;
 }
 
+footer {
+    width: 100%;
+    /*using grid instead of flexbox due to greater flexibility in case I wanna add stuff to the layout for some reason*/
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-areas: "footer"
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+
+.socials {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
 .nav-link{
     font-size: 2rem;
     padding: 0em 0.25em;
@@ -83,7 +102,6 @@ header#header {
     box-sizing: border-box;
     display: flex;
     flex-flow: row nowrap;
-    gap: 0.5em;
     align-items: center;
     justify-content: space-between;
     width: 100vw;
